<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">noteshare</string>
    <string name="title_section2">My Notes</string>
    <string name="title_section1">Nearby</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_new">New Note</string>
    <string name="title_activity_new_note">New</string>
    <string name="menu_share">Follow People</string>
    <string name="attach_image">Attach an Image</string>
    <string name="save">Save</string>
    <string name="write_note">Write a note…</string>
    <string name="from_camera">Camera</string>
    <string name="from_gallery">Gallery</string>
    <string name="add_picture">Add a Picture</string>
    <string name="install_musubi">Proceed to install Musubi now?</string>
    <string name="no_musubi">Musubi Not Installed</string>
    <string name="google_play">Play Store</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_view_note">Note</string>
    <string name="action_settings">Settings</string>
    <string name="note">Note</string>
    <string name="view_attached">View Attached Image</string>
    <string name="title_activity_view_attachment">Attachment</string>
    <string name="preview">Preview</string>
    <string name="title_activity_places">Find a Place</string>
    <string name="find_place">Find a Place…</string>
    <string name="continue_string">Continue</string>
    <string name="clear">Clear</string>
    <string name="set_location">Set Location</string>
    <string name="title_activity_nearby">Nearby</string>
    <string name="nearby">Nearby Map</string>

</resources>