<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings" android:visible="false"/>
    <item android:id="@+id/attachment" android:title="@string/attach_image" android:checked="false" android:showAsAction="always" android:checkable="true" android:icon="@android:drawable/ic_menu_gallery" android:orderInCategory="99">
        <menu>
            <item android:id="@+id/camera" android:title="@string/from_camera" android:icon="@android:drawable/ic_menu_camera"/>
            <item android:id="@+id/gallery" android:title="@string/from_gallery" android:icon="@android:drawable/ic_menu_gallery"/>
        </menu>
    </item>
    <item android:id="@+id/save" android:orderInCategory="101" android:showAsAction="always" android:title="@string/save" android:icon="@android:drawable/ic_menu_save"></item>
    <item android:id="@+id/view_attach" android:title="@string/view_attached" android:visible="false" android:orderInCategory="97" android:showAsAction="always" android:icon="@drawable/ic_menu_attachment1"></item>
    <item android:id="@+id/search" android:icon="@android:drawable/ic_menu_search" android:title="@string/find_place" android:orderInCategory="98" android:visible="true" android:showAsAction="always"></item>

</menu>