<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlacesActivity" >

    <AutoCompleteTextView
        android:id="@+id/place_complete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:hint="@string/find_place" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/place_complete"
        android:layout_alignRight="@+id/place_complete"
        android:layout_below="@+id/place_complete"
        android:text="@string/clear" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/clear_button"
        android:layout_alignRight="@+id/clear_button"
        android:layout_below="@+id/clear_button"
        android:enabled="false"
        android:text="@string/continue_string" />

</RelativeLayout>